Unified class histogram analysis.